--- a/references.bib
+++ b/references.bib
@@ -1,20 +1,71 @@
-@book{Xie2016,
-  title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
+@article{Marcon2014,
+  title = {Tools to Characterize Point Patterns: Dbmss for {{R}}},
+  author = {Marcon, Eric and Traissac, St{\'e}phane and Puech, Florence and Lang, Gabriel},
+  year = {2015},
+  journal = {Journal of Statistical Software},
+  volume = {67},
+  number = {3},
+  pages = {1--15},
+  doi = {10.18637/jss.v067.c03}
+}
+
+@article{Matern1960,
+  title = {Spatial Variation},
+  author = {Mat{\'e}rn, Bertil},
+  year = {1960},
+  journal = {Meddelanden fr{\aa}n Statens Skogsforskningsinstitut},
+  volume = {49},
+  number = {5},
+  pages = {1--144}
+}
+
+@article{Nguyen2016,
+  title = {Fungal Disease Incidence along Tree Diversity Gradients Depends on Latitude in {{European}} Forests},
+  author = {Nguyen, Diem and Castagneyrol, Bastien and Bruelheide, Helge and Bussotti, Filippo and Guyot, Virginie and Jactel, Herv{\'e} and Jaroszewicz, Bogdan and Valladares, Fernando and Stenlid, Jan and Boberg, Johanna},
   year = {2016},
-  isbn = {9781138700109},
-  url = {https://github.com/rstudio/bookdown},
+  month = apr,
+  journal = {Ecology and Evolution},
+  volume = {6},
+  number = {8},
+  pages = {2426--2438},
+  issn = {20457758},
+  doi = {10.1002/ece3.2056},
+  langid = {english}
 }
 
-@book{Xie2018,
-  title = {R Markdown: The Definitive Guide},
-  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2018},
-  isbn = {9781138359338},
-  url = {https://bookdown.org/yihui/rmarkdown},
+@book{R,
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2022},
+  publisher = {{R Foundation for Statistical Computing}},
+  address = {{Vienna, Austria}}
 }
 
+@article{Rutten2021,
+  title = {More Diverse Tree Communities Promote Foliar Fungal Pathogen Diversity, but Decrease Infestation Rates per Tree Species, in a Subtropical Biodiversity Experiment},
+  author = {Rutten, Gemma and H{\"o}nig, Lydia and Schwa{\ss}, Rowena and Braun, Uwe and Saadani, Mariem and Schuldt, Andreas and Michalski, Stefan G. and Bruelheide, Helge},
+  editor = {Mommer, Liesje},
+  year = {2021},
+  month = may,
+  journal = {Journal of Ecology},
+  volume = {109},
+  number = {5},
+  pages = {2068--2080},
+  issn = {0022-0477, 1365-2745},
+  doi = {10.1111/1365-2745.13620},
+  langid = {english}
+}
+
+@article{Saadani2021,
+  title = {Local {{Tree Diversity Suppresses Foliar Fungal Infestation}} and {{Decreases Morphological}} but {{Not Molecular Richness}} in a {{Young Subtropical Forest}}},
+  author = {Saadani, Mariem and H{\"o}nig, Lydia and Bien, Steffen and Koehler, Michael and Rutten, Gemma and Wubet, Tesfaye and Braun, Uwe and Bruelheide, Helge},
+  year = {2021},
+  month = feb,
+  journal = {Journal of Fungi},
+  volume = {7},
+  number = {3},
+  pages = {173},
+  issn = {2309-608X},
+  doi = {10.3390/jof7030173},
+  langid = {english}
+}
