--- a/JSE_appendix.Rmd
+++ b/JSE_appendix.Rmd
@@ -103,12 +103,250 @@ theme_update(panel.background=element_rect(fill="transparent", colour=NA),
 knitr::opts_chunk$set(dev.args=list(bg="transparent"))
 
 # Random seed
-set.seed(973)
+set.seed(975)
 ```
 
-# Data
+# Theoretical example: homogeneous controls
 
-## Data wrangling
+Analyses rely on the _dbmss_ [@Marcon2014] package for R [@R].
+
+## Dataset simulation
+
+We build a point pattern made of cases (the points of interest) and controls (the background distribution of points).
+
+Cases are a Matérn [@Matern1960] point pattern with $\kappa$ (expected) clusters of $\mu$ (expected) points in a circle of radius *scale*.
+Controls are a Poisson point pattern (i.e. complete spatial randomness) of $\lambda$ (expected) points.
+
+```{r}
+library(dbmss)
+# Simulation of cases (clusters)
+rMatClust(kappa = 10, scale = 0.05, mu = 10) %>% 
+  as.wmppp -> 
+  CASES
+CASES$marks$PointType <- "Cases"
+# Number of points
+CASES$n
+
+# Simulation of controls (random distribution)
+rpoispp(lambda = 200) %>% 
+  as.wmppp ->
+  CONTROLS
+CONTROLS$marks$PointType <-"Controls"
+# Number of points
+CONTROLS$n
+
+# Mixed patterns (cases and controls)
+ALL <- superimpose(CASES, CONTROLS)
+autoplot(ALL)
+```
+
+
+## Calculate and plot M Cases
+
+```{r}
+# Fix the number of simulations and the level of risk
+NumberOfSimulations <- 1000
+Alpha <- .01
+
+# Calculate and plot M Cases
+ALL %>% 
+  MEnvelope(
+    ReferenceType="Cases", 
+    SimulationType = "RandomLocation",
+    NumberOfSimulations = NumberOfSimulations,
+    Alpha = Alpha,
+    Global = TRUE
+  ) ->
+  M_env_cases
+
+autoplot(M_env_cases)
+```
+The plot shows a clear relative concentration of cases.
+
+
+## Map M results
+
+To plot the individual values of *M* around each case, a distance must be chosen.
+Then, the function must be computed at this distance with individual values.
+Finally, a kriged weighted, marked, planar point patterns (`kwmppp`) object is produced and plotted.
+
+```{r}
+# Choose the distance to plot
+Distance <- 0.1
+
+# Calculate the M values to plot
+ALL %>% 
+  Mhat(
+    r = c(0, Distance),
+    ReferenceType = "Cases",
+    NeighborType = "Cases", 
+    Individual = TRUE
+  ) -> 
+  M_TheoEx
+
+# Map resolution
+resolution <- 512
+
+# Create a kriged weighted marked planar point pattern (kwmppp)
+M_TheoEx_map <- kwmppp(
+  ALL, 
+  fvind = M_TheoEx, 
+  ReferenceType ="Cases", 
+  distance = Distance
+)
+
+# Plot the point pattern with values of M(Distance)
+plot(M_TheoEx_map)
+# Add the cases to the map
+points(
+  ALL[ALL$marks$PointType == "Cases"],
+  pch = 20
+)
+```
+
+## Compare with the density of cases
+
+The density of cases is plotted.
+High densities are similar to high relative concentrations in this example because the control points are homogeneously distributed.
+
+```{r}
+plot(density(CASES), main = "")
+points(
+  ALL[ALL$marks$PointType == "Cases"],
+  pch = 20
+)
+```
+
+
+# Theoretical example: inhimogeneous controls
+
+Analyses rely on the _dbmss_ [@Marcon2014] package for R [@R].
+
+## Dataset simulation
+
+We build a point pattern made of cases (the points of interest) and controls (the background distribution of points).
+
+Cases are a Matérn [@Matern1960] point pattern with $\kappa$ (expected) clusters of $\mu$ (expected) points in a circle of radius *scale*.
+Controls are a Poisson point pattern whose density $\lambda$ decreases exponentially along the y-axis (we will call "north" the higher y values).
+
+```{r}
+library(dbmss)
+# Simulation of cases (clusters)
+rMatClust(kappa = 10, scale = 0.05, mu = 10) %>% 
+  as.wmppp -> 
+  CASES
+CASES$marks$PointType <- "Cases"
+# Number of points
+CASES$n
+
+# Simulation of controls (random distribution)
+rpoispp(function(x, y) {1000 * exp(-2 * y)}) %>% 
+  as.wmppp ->
+  CONTROLS
+CONTROLS$marks$PointType <-"Controls"
+# Number of points
+CONTROLS$n
+
+# Mixed patterns (cases and controls)
+ALL <- superimpose(CASES, CONTROLS)
+autoplot(ALL)
+```
+
+
+## Calculate and plot M Cases
+
+```{r}
+# Fix the number of simulations and the level of risk
+NumberOfSimulations <- 1000
+Alpha <- .01
+
+# Calculate and plot M Cases
+ALL %>% 
+  MEnvelope(
+    ReferenceType="Cases", 
+    SimulationType = "RandomLocation",
+    NumberOfSimulations = NumberOfSimulations,
+    Alpha = Alpha,
+    Global = TRUE
+  ) ->
+  M_env_cases
+
+autoplot(M_env_cases)
+```
+
+The plot shows a clear relative concentration of cases.
+
+
+## Map M results
+
+To plot the individual values of *M* around each case, a distance must be chosen.
+Then, the function must be computed at this distance with individual values.
+Finally, a kriged weighted, marked, planar point patterns (`kwmppp`) object is produced and plotted.
+
+```{r}
+# Choose the distance to plot
+Distance <- 0.1
+
+# Calculate the M values to plot
+ALL %>% 
+  Mhat(
+    r = c(0, Distance),
+    ReferenceType = "Cases",
+    NeighborType = "Cases", 
+    Individual = TRUE
+  ) -> 
+  M_TheoEx
+
+# Map resolution
+resolution <- 512
+
+# Create a kriged weighted marked planar point pattern (kwmppp)
+M_TheoEx_map <- kwmppp(
+  ALL, 
+  fvind = M_TheoEx, 
+  ReferenceType ="Cases", 
+  distance = Distance
+)
+
+# Plot the point pattern with values of M(Distance)
+plot(M_TheoEx_map)
+# Add the cases to the map
+points(
+  ALL[ALL$marks$PointType == "Cases"],
+  pch = 20
+)
+```
+
+We can see that cases are concentrated everywhere (local M value above 1) because we chose a Matérn point pattern.
+
+The areas with the higher relative concentration are located in the north of the map because the controls are less dense there.
+The southern-most cluster illustrates that the relative concentration of cases, although higher than 1, is clearly lower than that of the northern clusters, which have the same characteristics but are in a less-dense control neighborhood.
+
+
+## Compare with the density of cases
+
+The density of cases is plotted.
+High densities are not similar to high relative concentrations in this example because the control points are not homogeneously distributed.
+
+```{r}
+plot(density(CASES), main = "")
+points(
+  ALL[ALL$marks$PointType == "Cases"],
+  pch = 20
+)
+```
+
+
+# Suzanne Lenglen Park
+
+## Data
+
+Our data is extracted from "Paris open data" [^1].
+
+[^1]: https://opendata.paris.fr.
+
+
+### Data wrangling
 
 Data are stored in `trees_2021.zip` which contains two GeoJSON files:
 
@@ -130,7 +368,7 @@ read_sf("data/trees_logged.geojson") %>%
 ```
 
 
-### All trees
+#### All trees
 
 The first dataset contains all trees in Paris in 2021, including those to be cut.
 
@@ -179,7 +417,7 @@ trees_all %>% nrow()
 We have 1472 trees in the park.
 
 
-### Logged trees
+#### Logged trees
 
 Logged trees are in the second dataset.
 
@@ -230,7 +468,7 @@ trees_logged %>% nrow()
 48 among the 1472 trees of the park were logged.
 
 
-## Merge
+#### Merge
 
 The two datasets are merged here.
 
@@ -265,7 +503,7 @@ trees_no_circumference %>%
 ```
 
 
-### Simpler logging reasons
+#### Simpler logging reasons
 
 Logging reasons can be:
 
@@ -281,7 +519,7 @@ trees$Logging_reason %>%
 ```
 
 
-### Factors
+#### Factors
 
 Several fields are converted to factors for efficiency.
 
@@ -292,7 +530,7 @@ trees$French_species_name <- as.factor(trees$French_species_name)
 ```
 
 
-## Point patterns
+### Point patterns
 
 dbmms uses weighted, marked, planar point patterns (wmppp).
 A wmppp named `trees_infected` is built. Point marks are their basal area (as weight) and either their logging reason or their genus if they are alive. 
@@ -341,9 +579,9 @@ The map shows the tree genera.
 Maple (*Acer sp.*) are the most abundant trees in the park.
 
 
-# Spatial analyses
+## Spatial analyses
 
-## Spatial concentration of maple trees
+### Spatial concentration of maple trees
 
 The M statistic is computed to detect the spatial concentration of maple trees before logging. 
 
@@ -425,7 +663,7 @@ points(
 Infected trees are present in the areas where maples are concentrated.
 
 
-## Concentration of maples around infected trees
+### Concentration of maples around infected trees
 
 To test the intertype concentration between sane and infected maple trees, the intertype M statistic is computed.
 
